# Clawome

./: .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml  start-backend.sh  start-frontend.sh  start.sh
backend/: __init__.py  app.py  browser_manager.py  compressor_manager.py  config.py  dom_parser.py  dom_walker.js  requirements.txt  semantic_hints.json
backend/compressors/: default.py  google_search.py  stackoverflow.py  wikipedia.py  youtube.py
backend/skill/: core.md  customize.md  index.md  manage.md
backend/task_agent/: runner.py
backend/task_agent/agent_config/: settings.py
backend/task_agent/browser/: api.py
backend/task_agent/chat/: orchestrator.py
backend/task_agent/engine/: runner.py
backend/task_agent/llm/: provider.py
backend/task_agent/models/: __init__.py  schemas.py  task.py
backend/task_agent/nodes/: exec_page_doctor.py  exec_step.py  exec_supervisor.py  plan_main_planner.py  review_evaluate.py  review_final.py  setup_browser_reset.py
backend/task_agent/shared/: __init__.py  browser_actions.py  llm_helpers.py  result_helpers.py
backend/task_agent/utils/: workflow_trace.py
backend/task_agent/v2/: __init__.py
clawome/: __main__.py  clawome_cli.py
cli/: clawome_cli.py
docs/: docusaurus.config.js  package-lock.json  sidebars.js
docs/docs/: intro.md
docs/docs/api/: control.md  dom-reading.md  file-download.md  interaction.md  keyboard.md  (+6 more)
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: api-reference.md
frontend/src/: App.jsx  api.js  index.css  main.jsx
(+53 files in other folders)
