[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clawome"
version = "0.1.7"
description = "Clawome — AI browser agent. One command to run any web task."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "langchain>=0.3.0",
    "langchain-litellm>=0.5.0",
    "litellm>=1.40.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
clawome = "clawome.clawome_cli:main"

[tool.setuptools.packages.find]
include = ["clawome*", "backend*"]
exclude = ["backend.venv*", "backend.task_agent.data*"]

[tool.setuptools.package-data]
backend = ["skill/*.md", "static/**/*"]
